Update SEALS plots

--- a/README.html
+++ b/README.html
@@ -58,72 +58,15 @@ ul.task-list li input[type="checkbox"] {
 <h2 class="anchored" data-anchor-id="seals">SEALS</h2>
 <section id="baseline" class="level3">
 <h3 class="anchored" data-anchor-id="baseline">Baseline</h3>
+<p><img src=".png" class="img-fluid"></p>
 </section>
 <section id="scenarios" class="level3">
 <h3 class="anchored" data-anchor-id="scenarios">Scenarios</h3>
-<table class="table">
-<thead>
-<tr class="header">
-<th></th>
-<th>ssp1_rcp26</th>
-<th>ssp2_rcp45</th>
-<th>ssp5_rcp85</th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td>2030</td>
-<td>link</td>
-<td>link</td>
-<td>link</td>
-</tr>
-<tr class="even">
-<td>2035</td>
-<td>link</td>
-<td>link</td>
-<td>link</td>
-</tr>
-<tr class="odd">
-<td>2040</td>
-<td>link</td>
-<td>link</td>
-<td>link</td>
-</tr>
-</tbody>
-</table>
+<p><img src="plots/ghana_standard.png" class="img-fluid"></p>
 </section>
 <section id="scenarios-under-policy" class="level3">
 <h3 class="anchored" data-anchor-id="scenarios-under-policy">Scenarios under Policy</h3>
-<table class="table">
-<thead>
-<tr class="header">
-<th></th>
-<th>ssp1_rcp26</th>
-<th>ssp2_rcp45</th>
-<th>ssp5_rcp85</th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td>2030</td>
-<td>link</td>
-<td>link</td>
-<td>link</td>
-</tr>
-<tr class="even">
-<td>2035</td>
-<td>link</td>
-<td>link</td>
-<td>link</td>
-</tr>
-<tr class="odd">
-<td>2040</td>
-<td>link</td>
-<td>link</td>
-<td>link</td>
-</tr>
-</tbody>
-</table>
+<p><img src="plots/ghana_policy_forest.png" class="img-fluid"></p>
 </section>
 <section id="narrative-description" class="level3">
 <h3 class="anchored" data-anchor-id="narrative-description">Narrative Description</h3>
