--- a/README.html
+++ b/README.html
@@ -152,7 +152,7 @@ ul.task-list li input[type="checkbox"] {
 <li><code>process_invest_inputs.py</code></li>
 <li><code>run_invest_ghana_policy.py</code></li>
 </ul></li>
-<li><p>Visualize</p>
+<li><p>Visualization</p>
 <p>After running SEALS and InVEST, the maps may be visualized to explore the results.</p>
 <ul>
 <li><code>seals_plot.py</code></li>
@@ -162,9 +162,13 @@ ul.task-list li input[type="checkbox"] {
 </section>
 <section id="other-projects" class="level3">
 <h3 class="anchored" data-anchor-id="other-projects">Other Projects</h3>
-</section>
-<section id="more-from-apec-8601" class="level3">
-<h3 class="anchored" data-anchor-id="more-from-apec-8601">More from APEC 8601</h3>
+<p>In addition to this project, I developed other code for APEC 8601: Natural Resource Economics.</p>
+<ul>
+<li><a href="problem_sets/apec8601_mbraak_ps1.html">Problem Set 1</a></li>
+<li><a href="problem_sets/problem_set_2_v2_mbraak.ipynb">Problem Set 2</a></li>
+<li><a href="problem_sets/apec8601_mbraak_ps3.html">Problem Set 3</a></li>
+<li><a href="problem_sets/apec8601_mbraak_ps4.html">Problem Set 4</a></li>
+</ul>
 </section>
 </section>
 </section>
