--- a/README.html
+++ b/README.html
@@ -125,7 +125,7 @@ ul.task-list li input[type="checkbox"] {
 </section>
 <section id="executive-summary" class="level2">
 <h2 class="anchored" data-anchor-id="executive-summary">Executive Summary</h2>
-<p>Summary</p>
+<p>Ghana has the opportunity to foster sustainable development without sacrificing critical natural resources. While the future global climate is uncontrollable at a country level, policies can be implemented to ensure that development does not degrade the environment. Even in the era of ‘Fossil-fueled Development,’ preventing cropland expansion into forest land ensures that ecosystem system provision is guaranteed for future generations.</p>
 </section>
 <section id="technical-details" class="level2">
 <h2 class="anchored" data-anchor-id="technical-details">Technical Details</h2>
@@ -164,10 +164,10 @@ ul.task-list li input[type="checkbox"] {
 <h3 class="anchored" data-anchor-id="other-projects">Other Projects</h3>
 <p>In addition to this project, I developed other code for APEC 8601: Natural Resource Economics.</p>
 <ul>
-<li><a href="problem_sets/apec8601_mbraak_ps1.html">Problem Set 1</a></li>
+<li><a href="problem_sets/apec8601_mbraak_ps1.pdf">Problem Set 1</a></li>
 <li><a href="problem_sets/problem_set_2_v2_mbraak.ipynb">Problem Set 2</a></li>
-<li><a href="problem_sets/apec8601_mbraak_ps3.html">Problem Set 3</a></li>
-<li><a href="problem_sets/apec8601_mbraak_ps4.html">Problem Set 4</a></li>
+<li><a href="problem_sets/apec8601_mbraak_ps3.pdf">Problem Set 3</a></li>
+<li><a href="problem_sets/apec8601_mbraak_ps4.pdf">Problem Set 4</a></li>
 </ul>
 </section>
 </section>
